# HWC-GUnit

./: CMakeLists.txt  README.md  clean.sh  runAllTests.sh
unitTest/: HWCGUnitTest.cpp  example.cpp
